# kiwibot

./: README.md  ian_524.sh  install.sh  install_all.md  install_notes.sh  locobot_install_raf.sh  raf_noetic.sh
.github/workflows/: build_and_test.yaml
corgibot/: install_hist.sh
corgibot/scripts/: gladier_run.py  install_hist.sh  run.sh
corgibot_ros/: CMakeLists.txt  package.xml
corgibot_ros/config/: default.yaml
corgibot_ros/launch/: corgibot_control.launch
install/: install_april.sh  install_create.sh  install_full.sh  install_kiwi.sh  install_loco.sh  install_low.sh  install_orb.sh  install_pang.sh  install_pyrobot.sh  install_real.sh  install_ros.sh  install_vnc.sh
kiwibot/: CMakeLists.txt  package.xml  read_camera.py
kiwibot/launch/: kiwibot_control.launch  kiwibot_description.launch  remote_view.launch  rtabmapviz_remote.launch
kiwibot_ros/: package.xml
kiwibot_ros/launch/: kiwibot_control.launch  remote_view.launch
kiwibot_ros/rviz/: kiwi_description.rviz
notebooks/: dalek.ipynb  robot.py
old_notes/: ian_524.sh  install_notes.sh  scratch.sh
scripts/: clean_workspace.sh  install_april.sh  install_full.sh  install_kiwi.sh  install_raf.sh  install_vnc.sh
