<?xml version="1.0"?>
<package format="2">
  <name>kiwibot_control</name>
  <version>0.0.0</version>
  <description>The kiwibot_control package</description>
  <maintainer email="ravescovi@gmail.com">Rafael Vescovi</maintainer>
  <license>BSD</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>interbotix_xs_sdk</build_depend>
  <build_depend>interbotix_xs_modules</build_depend>
  <build_depend>interbotix_xslocobot_descriptions</build_depend>
  <build_depend>kobuki_node</build_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_depend>rgbd_launch</build_depend>
  <build_export_depend>interbotix_xs_sdk</build_export_depend>
  <build_export_depend>interbotix_xs_modules</build_export_depend>
  <build_export_depend>interbotix_xslocobot_descriptions</build_export_depend>
  <build_export_depend>kobuki_node</build_export_depend>
  <build_export_depend>realsense2_camera</build_export_depend>
  <build_export_depend>rgbd_launch</build_export_depend>
  <exec_depend>interbotix_xs_sdk</exec_depend>
  <exec_depend>interbotix_xs_modules</exec_depend>
  <exec_depend>interbotix_xslocobot_descriptions</exec_depend>
  <exec_depend>kobuki_node</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rgbd_launch</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
